# comic_reader

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  custom.cmake  pubspec.yaml  setup_third_party_libs.sh  vcpkg.json
.github/workflows/: build.yml  ci.yml  release.yml
.github/workflows/setup/: action.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/comic_reader/: MainActivity.kt
include/: animator.hpp  archive.hpp  comic.hpp  comic_gallery.hpp  comic_viewer.hpp  fuzzy.hpp  image_utils.hpp  image_viewer.hpp  lru.hpp  util.hpp  viewport.hpp  wxUtil.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: comic.dart  comic_gallery_route.dart  comic_grid_route.dart  comic_viewer_route.dart  file_picker_route.dart
lib/src/libarchive/: ffigen.yml  generated_bindings.dart  libarchive.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
resource/: builder.sh  comic_reader.desktop  main.rc
src/: archive.cpp  archive_test.cpp  comic.cpp  comic_gallery.cpp  comic_test.cpp  comic_viewer.cpp  fuzzy.cpp  fuzzy_test.cpp  image_utils.cpp  image_viewer.cpp  lru_test.cpp  main.cpp  viewport.cpp  wxUtil.cpp
test/: main_test.dart  widget_test.dart
testdata/: test.rar
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
